149 go java 17 (#164)
* Use Java 17 programming features

* Use more Java 17 code

* Add changelog

* Enable java 17 in actions

---------

Co-authored-by: Michael Lieshoff <michael.lieshoff@virtual-solution.com>